Fixed homepage on mobile

--- a/app/assets/stylesheets/gardeners/_search.scss
+++ b/app/assets/stylesheets/gardeners/_search.scss
@@ -9,7 +9,8 @@
  ._address {
     margin: 0 8px !important;
   }
-  #location-icon  {
+  .icon  {
     width: 20px;
   }
+
 }
